Cleaned up html

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
 
   <body>
-
+   <div class="container">
    <!--DON DON's FROZEN DELIGHTS LOGO-->
    <section id="keygroup">
     <!--This is where LOGO AND NAV ARE LOCATED-->
@@ -157,6 +157,6 @@
 <section id="footer">
   <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
 </section>
-
+</div>
 </body>
 </html>
