--- a/order.html
+++ b/order.html
@@ -35,8 +35,8 @@
 
 
   <body>
-
-
+  
+   <div class="container">
     <section id="keygroup">
     <!--This is where LOGO AND NAV ARE LOCATED-->
       <nav class="grid">
@@ -239,6 +239,6 @@
     <section id="footer">
         <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
     </section>
-
+  </div>
   </body>
   </html>
