--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -35,7 +35,7 @@
 
 
   <body>
-
+   <div class="container">
 
     <section id="keygroup">
     <!--This is where LOGO AND NAV ARE LOCATED-->
@@ -118,6 +118,6 @@
 <section id="footer">
   <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
 </section>
-
+</div>
 </body>
 </html>
