--- a/product_bukosalad.html
+++ b/product_bukosalad.html
@@ -33,7 +33,7 @@
 
 
   <body>
-
+   <div class="container">
     <!--DON DON's FROZEN DELIGHTS LOGO-->
     <section id="keygroup">
     <!--This is where LOGO AND NAV ARE LOCATED-->
@@ -81,7 +81,7 @@
 
  <div class="grid productvariety">
   <div class="col-12">
-    <h4>Offered in these varieties: </h3>
+    <h4>Offered in these varieties: </h4>
     </div>
     <div class="col-2 thumbnail">
       <figure>
@@ -104,8 +104,9 @@
       <a class="button" href="order.html">Order</a>
     </div>
   </div>
-  <section id="footer">
+   <section id="footer">
     <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
    </section>
+   </div>
 </body>
 </html>
