--- a/products.html
+++ b/products.html
@@ -33,10 +33,8 @@
 
 
   <body>
-
-   <!--DON DON's FROZEN DELIGHTS LOGO-->
-   <section id="keygroup">
-    <!--This is where LOGO AND NAV ARE LOCATED-->
+   <div class="container">
+     <section id="keygroup">
       <nav class="grid">
         <div class="col-3 logo">
           <a href="index.html">
@@ -62,10 +60,6 @@
       
     </section>     
 
-<!--MOST RECENT UPDATE!-->
-  <!--
-      This is the first column
-    -->    
     <div class="grid"> <!-- Starting a different grid -->
 
       <div class="col-6 flavour">
@@ -144,18 +138,18 @@
        </div>  
 
        <div class="col-4 thumbnail">
-        <figure>
-          <img width="300" height="300" alt="Product Image" src="img/buko-salad.jpg">
-          <a href="product_bukosalad.html"><div class="overlay">
-            <figcaption>Buko Salad</figcaption>
-          </div></a>
-        </figure>
+         <figure>
+           <img width="300" height="300" alt="Product Image" src="img/buko-salad.jpg">
+           <a href="product_bukosalad.html"><div class="overlay">
+             <figcaption>Buko Salad</figcaption>
+           </div></a>
+         </figure>
 
-      </div>
+       </div>
 
-    </div> <!--flavour-->
+     </div> <!--flavour-->
 
-    <div class="col-6 type">
+     <div class="col-6 type">
       <div class="col-12">
         <h3>Types</h3>
       </div>
@@ -239,14 +233,12 @@
         </figure>
 
       </div>
-
-
-
     </div> <!--type-->
+    
     <section id="footer">
       <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
     </section>
   </div>
-
+</div>
 </body>
 </html>
