Fixed order button since gh-pages doesn't allow form inputs

--- a/order.html
+++ b/order.html
@@ -226,9 +226,12 @@
                     <textarea class="form" id="form-comment" placeholder="Place any questions of concerns here"></textarea>
                   </div>
                 </div>
-
-
-                <input class="form-submit" type="submit" value="Process Order" href="order_confirmation.html">
+                
+                <div class="grid">
+                  <div class="col-12">
+                    <a class="button" href="order_confirmation.html">Process Order</a>
+                  </div>
+                </div>
               </div> <!--col 12-->
 
             </form>
